Refactor ingredient handling in ReverseWorkbenchBlockScreen and ReversingWorkPacketHandler for improved clarity and efficiency